# jconflogger-python

./: .gitignore  README.md  pyproject.toml  sample_usage.py
jconflogger/: __init__.py  defaultConf.json
sampleConfigs/: sampleConf.json
